<resources>
    <string name="app_name">Home Sweet Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_location">Adicionar Lugar</string>
    <string name="add_place">Adicionar</string>
    <string name="see_place_list">Ver Mapa</string>
    <string name="title_activity_maps">Places</string>
    <string name="title_activity_add">Add</string>
    <string name="accept_pets">Aceita Animais</string>
    <string name="accept_kids">Aceita Crianças</string>
    <string name="has_backyard">Tem quintal</string>
    <string name="backyard_apart">Quintal Separado</string>
    <string name="light_apart">Luz Separada</string>
    <string name="water_apart">Água Separada</string>
    <string name="save">Salvar</string>
    <string name="code">Código</string>
    <string name="estate_agency">Imobiliária</string>
    <string name="description">Descrição</string>
    <string name="address">Endereço</string>
    <string name="value">Valor</string>
    <string name="save_success">Imóvel salvo com sucesso!</string>
</resources>
