<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context="com.darakeon.hsh.AddActivity"
	android:orientation="vertical">

	<TextView
		android:text="@string/code"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    <EditText
		android:id="@+id/field_code" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="text"/>

	<TextView
		android:text="@string/estate_agency"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    <EditText
		android:id="@+id/field_estate_agency" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="text"/>

	<TextView
		android:text="@string/description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    <EditText
		android:id="@+id/field_description" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="text"/>

	<TextView
		android:text="@string/address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    <EditText 
		android:id="@+id/field_address" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="text"/>

	<TextView
		android:text="@string/value"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    <EditText 
		android:id="@+id/field_value" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="numberDecimal"/>
	
	<View
		android:layout_width="match_parent"
		android:layout_height="12sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false">
		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<CheckBox
					android:id="@+id/field_accept_pets"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/accept_pets"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
			<CheckBox
				android:id="@+id/field_accept_kids"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/accept_kids"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<CheckBox
					android:id="@+id/field_has_backyard"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/has_backyard"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<CheckBox
					android:id="@+id/field_backyard_apart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/backyard_apart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<CheckBox
					android:id="@+id/field_light_apart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/light_apart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<CheckBox
					android:id="@+id/field_water_apart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/water_apart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/save"
        android:onClick="savePlaceAndBack" />

</LinearLayout>
